# python-project-50

./: .coverage  .coveragerc  .flake8  .gitignore  .ruff.toml  Makefile  README.md  coverage.xml  demo.cast  probe.py  pyproject.toml  pytest.ini  ruff.toml  second_project.cast  sonar-project.properties
.github/workflows/: ci.yml  pyci.yml  sonar.yml
formatters/: __init__.py
gendiff/: __init__.py  diff.py  gendiff.py  init.py  nodes.py  parser.py  parsers.py  readers.py  tree.py
gendiff/formatters/: __init__.py  init.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  core.py  diff_builder.py  gendiff.py  parser.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py  test_cli_format_option.py  test_diff.py  test_diff_add.py  test_diff_empty.py  test_formatters.py  test_formatters_init.py  test_formatters_init_mapping.py  test_formatters_json.py  test_formatters_plain.py  test_formatters_stylish.py  test_gendiff.py  test_gendiff_script.py  test_generate_diff.py  test_generate_diff_internal.py  test_generate_diff_nested.py  test_generate_diff_plain.py  test_generate_diff_yaml.py  test_init_module.py  test_json_diff.py  test_nested_diff.py  test_parser.py  test_plain_diff.py  test_reader.py  test_reader_and_parser.py  test_tree.py
tests/test/: test_formatters_init.py  test_generate_diff_entry.py
tests/test_data/: expected_result_json.txt
