[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "CLI-utility that compares two configuration files and shows a difference."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4"
]

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
